--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git://github.com/omcaree/node-pololumaestro.git"
   },
   "dependencies": {
-    "serialport": "^1.2",
+    "serialport": "^3.x",
     "winston": "^0.8",
     "async": "^0.9"
   },
